restyle page-edit button to fixed position when text scrolled - if an edit is needed, now there is no need to scroll to top of file - move the div to the main tile - restyle to make fairly unobtrusive - z-index so it floats above text. - opacity 50% so when overlapping, text is visible

--- a/Website/plugins/page-styling/css/page-styling-dark.css
+++ b/Website/plugins/page-styling/css/page-styling-dark.css
@@ -177,16 +177,21 @@ strong {
   color: #EED891;
 }
 
-.raku.page-header .page-edit {
+.page-edit {
   color: #83858D;
+  left: 95vw;
+  position: fixed;
+  top: 15vh;
+  z-index: 10;
+  opacity: 50%;
 }
-.raku.page-header .page-edit .page-edit-button {
-  background: #282c2e;
-  color: gainsboro;
+.page-edit .page-edit-button {
+  background: #1B1D1E;
+  color: #EED891;
   border-color: #3A3D4E;
 }
-.raku.page-header .page-edit .page-edit-button:hover {
-  background: #212426;
+.page-edit .page-edit-button:hover {
+  background: #282c2e;
 }
 
 /* Raku search page */
